CVBY-232 Added css to show timer list above instead of at the bottom, the issue here is that the list goes off screen because of the size of the container and the fact that it goes in the middle, this is a quick and practical fix IMO.

--- a/public/css/components/date-picker.less
+++ b/public/css/components/date-picker.less
@@ -45,3 +45,9 @@
   background-color: @color-grey-lighter;
 }
 
+.rd-time-list
+{
+  top: -160px;
+  border: 1px solid @color-grey-light;
+  border-radius: 4px 4px 0 0;
+}
